correção ortográfica na conclusão do arquivo

--- a/Reconhecimento Facial em imagens com openCV.ipynb
+++ b/Reconhecimento Facial em imagens com openCV.ipynb
@@ -446,7 +446,7 @@
    "source": [
     "## Considerações finais\n",
     "\n",
-    "É preciso ajustar o fator de scala e outros parâmetros do método **.detectMultiSc()** para cada caso de análise.\n",
+    "É preciso ajustar o fator de scala e outros parâmetros do método **.detectMultiScale()** para cada caso de análise.\n",
     "\n",
     "Nas imagens com visão ampla, como as da torcida, o resultado da detecção foi consideravelmente bom. Todavia, ao usar os mesmos parâmetros para grupos menores, há uma grande quantidade de falsos positivos, ruídos nas imagens.\n",
     "\n",
